--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
 include README.md
 include requirements.txt
-
+recursive-include src/thereotical_profiles *.py
+recursive-include src *.py
